[package]
name = "gl_easy_text"
version = "0.1.0"
authors = ["Benjamin Lindley <benjameslindley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl_helpers = { git="https://github.com/blindley/gl_helpers.git" }